Title menu for queue
Add a title to a queue via the context menu. Can also add when viewing the queue contents.

--- a/src/Panama/View/Tool/SettingsWindow.xaml
+++ b/src/Panama/View/Tool/SettingsWindow.xaml
@@ -279,7 +279,7 @@
 
                     <CheckBox
                         Content="{x:Static r:Strings.SettingsQueue}"
-                        IsChecked="{Binding Config.IsQueueFeatureEnabled}"/>
+                        IsChecked="{Binding Config.IsTitleQueueVisible}"/>
 
                     <CheckBox
                         Grid.Row="1"
