Implement title filter
When viewing a title queue, implement the ability to filter on title in order to find a title easier.

--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -56,8 +56,11 @@
                         tk:Property.IsVisible="{Binding QueueEditMode}"/>
 
                     <Separator/>
+
+                    <TextBlock Text="Title"/>
+                    <TextBox Width="160" Text="{Binding Filters.Text, Delay=500, UpdateSourceTrigger=PropertyChanged}"/>
                     
-                    <TextBlock Text="Filters"/>
+                    <TextBlock Text="State"/>
                     
                     <Button
                         Content="Idle"
