Implement open latest title version (queue)
When viewing a queue, implement the ability to double click the row (or use the context menu) to open the latest version of the title.

--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -113,6 +113,10 @@
                     RestoreStateBehavior="RestoreLastSelection"
                     tk:DataGridColumns.Columns="{Binding Columns}">
 
+                    <DataGrid.InputBindings>
+                        <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenRowCommand}"/>
+                    </DataGrid.InputBindings>
+
                     <DataGrid.ContextMenu>
                         <ContextMenu ItemsSource="{Binding MenuItems}"/>
                     </DataGrid.ContextMenu>
