--- a/src/Panama/View/Title/TitleEditRelated.xaml
+++ b/src/Panama/View/Title/TitleEditRelated.xaml
@@ -1,4 +1,4 @@
-﻿<StackPanel
+﻿<Grid
     x:Class="Restless.Panama.View.TitleEditRelated"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,58 +9,22 @@
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
     d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
     mc:Ignorable="d"
+    tk:Property.RowHeights="*"
     d:DesignHeight="600" d:DesignWidth="360">
-
-        
-    <Grid tk:Property.RowHeights="*,*">
             
-        <tk:DataGrid
-            Style="{StaticResource DataGridStackStyle}"
-            ItemsSource="{Binding Related.ListView}"
-            SelectedItem="{Binding Related.SelectedItem}"
-            tk:DataGridColumns.Columns="{Binding Related.Columns}">
+    <tk:DataGrid
+        ItemsSource="{Binding Related.ListView}"
+        SelectedItem="{Binding Related.SelectedItem}"
+        tk:DataGridColumns.Columns="{Binding Related.Columns}">
 
-            <DataGrid.InputBindings>
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding Related.OpenRowCommand}"/>
-            </DataGrid.InputBindings>
+        <DataGrid.InputBindings>
+            <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding Related.OpenRowCommand}"/>
+        </DataGrid.InputBindings>
 
-            <DataGrid.ContextMenu>
-                <ContextMenu ItemsSource="{Binding Related.MenuItems}"/>
-            </DataGrid.ContextMenu>
+        <DataGrid.ContextMenu>
+            <ContextMenu ItemsSource="{Binding Related.MenuItems}"/>
+        </DataGrid.ContextMenu>
 
-        </tk:DataGrid>
+    </tk:DataGrid>
 
-        <!--<Grid
-            Grid.Row="1"
-            tk:Property.ColumnWidths="Auto,*"
-            tk:Property.RowHeights="Auto,*"
-            Style="{StaticResource DataEntryPanelStyle}"
-            Visibility="{Binding Related.EditVisibility}">
-
-            <TextBlock Text="Published"/>
-            <tk:Calendar
-                Grid.Row="1"
-                Margin="0,-3,8,0"
-                SelectedDateUtc="{Binding Published.PublishedDate}"/>
-
-            <StackPanel Grid.Column="1" Grid.RowSpan="2">
-
-                <TextBlock Text="Url"/>
-                <TextBox Text="{Binding Published.SelectedPublished.Url}"/>
-
-                <TextBlock Text="Note"/>
-                <TextBox
-                    Style="{StaticResource TextBoxMultiStyle}"
-                    MinHeight="106"
-                    MaxHeight="106"
-                    Text="{Binding Published.SelectedPublished.Notes}"/>
-
-            </StackPanel>
-
-        </Grid>-->
-
-    </Grid>
-    
-
-
-</StackPanel>
+</Grid>
