--- a/src/Panama/View/Title/TitleQueueView.xaml
+++ b/src/Panama/View/Title/TitleQueueView.xaml
@@ -58,7 +58,7 @@
                     <Separator/>
 
                     <TextBlock Text="Title"/>
-                    <TextBox Width="160" Margin="0,0,16,0" Text="{Binding Filters.Text, Delay=500, UpdateSourceTrigger=PropertyChanged}"/>
+                    <TextBox Width="180" Margin="0,0,16,0" Text="{Binding Filters.Text, Delay=500, UpdateSourceTrigger=PropertyChanged}"/>
 
                     <CheckBox Content="Idle" IsChecked="{Binding IsIdleFilterChecked}"/>
                     <CheckBox Content="Scheduled" IsChecked="{Binding IsScheduledFilterChecked}"/>
@@ -68,7 +68,7 @@
 
                     <Button
                         Content="{x:Static r:Strings.MenuItemReset}"
-                        ToolTip="{x:Static r:Strings.ToolTipFilterClear}"
+                        ToolTip="{x:Static r:Strings.ToolTipFilterReset}"
                         Command="{Binding ClearFilterCommand}"/>
 
                     <TextBlock
