--- a/src/Panama/View/Title/TitleCustomFilter.xaml
+++ b/src/Panama/View/Title/TitleCustomFilter.xaml
@@ -1,17 +1,17 @@
-﻿<Popup 
+﻿<Popup
     x:Class="Restless.Panama.View.TitleCustomFilter"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
     xmlns:conl="clr-namespace:Restless.Panama.Controls;assembly=Panama.Controls"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
     d:DataContext="{d:DesignInstance Type=vm:TitleViewModel}"
-    mc:Ignorable="d" 
+    mc:Ignorable="d"
     d:DesignHeight="450" d:DesignWidth="800">
-    
+
     <Border
         Style="{StaticResource BorderEditContainerStyle}"
         BorderThickness="2"
@@ -37,7 +37,7 @@
             <StackPanel Grid.ColumnSpan="2">
                 <TextBlock Text="{x:Static r:Strings.TextTitle}"/>
                 <TextBox
-                    Text="{Binding Filters.Text, 
+                    Text="{Binding Filters.Text,
                     UpdateSourceTrigger=PropertyChanged,
                     Delay=500}"/>
             </StackPanel>
@@ -46,22 +46,23 @@
             <StackPanel Grid.Row="1" Grid.ColumnSpan="2">
                 <TextBlock Text="Path"/>
                 <TextBox
-                    Text="{Binding Filters.Directory, 
+                    Text="{Binding Filters.Directory,
                     UpdateSourceTrigger=PropertyChanged,
-                    Delay=500}"/>                
+                    Delay=500}"/>
             </StackPanel>
-            
+
             <!-- Flags -->
             <StackPanel Grid.Row="2">
                 <tk:ThreeWay Header="{x:Static r:Strings.TextReady}" State="{Binding Filters.ReadyState}"/>
                 <tk:ThreeWay Header="{x:Static r:Strings.TextFlagged}" State="{Binding Filters.FlaggedState}"/>
-                <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
+                <tk:ThreeWay Header="{x:Static r:Strings.TextHasRelated}" State="{Binding Filters.RelatedState}"/>
             </StackPanel>
 
             <StackPanel Grid.Row="2" Grid.Column="1">
                 <tk:ThreeWay Header="{x:Static r:Strings.TextSubmitted}" State="{Binding Filters.CurrentlySubmittedState}"/>
                 <tk:ThreeWay Header="{x:Static r:Strings.TextEverSubmitted}" State="{Binding Filters.EverSubmittedState}"/>
-                <tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>
+                <tk:ThreeWay Header="{x:Static r:Strings.TextPublished}" State="{Binding Filters.PublishedState}"/>
+                <!--<tk:ThreeWay Header="{x:Static r:Strings.TextSelfPublished}" State="{Binding Filters.SelfPublishedState}"/>-->
             </StackPanel>
 
             <StackPanel Grid.Row="3" Grid.ColumnSpan="2">
@@ -71,9 +72,9 @@
                         Foreground="{StaticResource DarkAlertForegroundBrush}"
                         Text="{Binding Filters.WordCountText, Mode=OneWay}"/>
                 </TextBlock>
-                
+
                 <Slider
-                    Minimum="-4000" Maximum="4000" 
+                    Minimum="-4000" Maximum="4000"
                     TickFrequency="100"
                     Value="{Binding Filters.WordCount, Mode=TwoWay, Delay=500}"/>
 
