--- a/src/Panama/View/MainWindow.xaml
+++ b/src/Panama/View/MainWindow.xaml
@@ -1,21 +1,23 @@
-﻿<tk:AppWindow
+﻿<mah:MetroWindow
     x:Class="Restless.Panama.View.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:ico="http://metro.mahapps.com/winfx/xaml/iconpacks"
     xmlns:core="clr-namespace:Restless.Panama.Core"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
     xmlns:vm="clr-namespace:Restless.Panama.ViewModel" d:DataContext="{d:DesignInstance Type=vm:MainWindowViewModel}"
     d:DesignHeight="300" d:DesignWidth="610"
     mc:Ignorable="d"
-    Style="{StaticResource DefaultAppWindowStyle}"
+    Style="{StaticResource Panama.Styles.MetroWindow}"
     Title="{Binding Path=DisplayName, Mode=OneTime}"
     TextOptions.TextRenderingMode="ClearType"
     WindowStartupLocation="CenterScreen">
 
+<!--
     <tk:AppWindow.Menu>
         <Menu KeyboardNavigation.TabNavigation="Cycle">
             <MenuItem Header="_File">
@@ -37,11 +39,6 @@
                     Header="{x:Static r:Strings.MenuItemAuthors}"
                     Icon="{ico:Material Kind=Account}"
                     Command="{Binding Commands[NavigateAuthor]}"/>
-
-                <!--<MenuItem
-                    Header="Credentials"
-                    Icon="{ico:Material Kind=Lock}"
-                    Command="{Binding Commands[NavigateCredential]}"/>-->
 
                 <MenuItem
                     Header="{x:Static r:Strings.MenuItemTags}"
@@ -96,6 +93,7 @@
             </MenuItem>
         </Menu>
     </tk:AppWindow.Menu>
+-->
 
     <Grid>
         <Grid.ColumnDefinitions>
@@ -149,4 +147,4 @@
         <StatusBar Grid.Row="1" Grid.ColumnSpan="3" Style="{StaticResource MainStatusBarStyle}"/>
 
     </Grid>
-</tk:AppWindow>
+</mah:MetroWindow>
