--- a/src/Panama/View/Other/AboutWindow.xaml
+++ b/src/Panama/View/Other/AboutWindow.xaml
@@ -1,17 +1,18 @@
-﻿<tk:AppWindow
+﻿<mah:MetroWindow
     x:Class="Restless.Panama.View.AboutWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:tk="http://schemas.restless.toolkit.com/2021"
+    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
     xmlns:r="clr-namespace:Restless.Panama.Resources"
-    xmlns:vm="clr-namespace:Restless.Panama.ViewModel" 
+    xmlns:vm="clr-namespace:Restless.Panama.ViewModel"
     d:DataContext="{d:DesignInstance Type=vm:AboutWindowViewModel}"
     mc:Ignorable="d"
     ResizeMode="NoResize"
     Title="{Binding DisplayName, Mode=OneTime}"
-    Style="{StaticResource DefaultAppWindowStyle}"
+    Style="{StaticResource Panama.Styles.MetroWindow}"
     Width="440"
     SizeToContent="Height"
     ShowInTaskbar="False">
@@ -60,70 +61,5 @@
                 Text="{Binding Config.StartupCount, Mode=OneTime, StringFormat='{}{0:#,0}'}"/>
         </TextBlock>
 
-        <Separator Margin="0,6"/>
-
-        <TextBlock Text="Icons"/>
-
-        <WrapPanel>
-            <WrapPanel.Resources>
-                <Style TargetType="ContentControl">
-                    <Setter Property="Margin" Value="5"/>
-                </Style>
-            </WrapPanel.Resources>
-            <ContentControl Content="{StaticResource AlertIconKey}"/>
-            <ContentControl Content="{StaticResource AppPathIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowDownIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowLeftIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowRightIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowUpIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowDownMediumIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowLeftMediumIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowRightMediumIconKey}"/>
-            <ContentControl Content="{StaticResource ArrowUpMediumIconKey}"/>
-            <ContentControl Content="{StaticResource ChevronDownIconKey}"/>
-            <ContentControl Content="{StaticResource ChevronLeftIconKey}"/>
-            <ContentControl Content="{StaticResource ChevronRightIconKey}"/>
-            <ContentControl Content="{StaticResource ChevronUpIconKey}"/>
-            <ContentControl Content="{StaticResource CircleIconKey}"/>
-            <ContentControl Content="{StaticResource CircleSmallIconKey}"/>
-            <ContentControl Content="{StaticResource CircleSmallBlueIconKey}"/>
-            <ContentControl Content="{StaticResource CircleSmallGreenIconKey}"/>
-            <ContentControl Content="{StaticResource ExitIconKey}"/>
-            <ContentControl Content="{StaticResource FileIconKey}"/>
-            <ContentControl Content="{StaticResource FilterIconKey}"/>
-            <ContentControl Content="{StaticResource FilterOffIconKey}"/>
-            <ContentControl Content="{StaticResource LinkIconKey}"/>
-            <ContentControl Content="{StaticResource LockIconKey}"/>
-            <ContentControl Content="{StaticResource LockMediumIconKey}"/>
-            <ContentControl Content="{StaticResource NoteIconKey}"/>
-            <ContentControl Content="{StaticResource PlusIconKey}"/>
-            <ContentControl Content="{StaticResource PublisherIconKey}"/>
-            <ContentControl Content="{StaticResource ReportIconKey}"/>
-            <ContentControl Content="{StaticResource SaveIconKey}"/>
-            <ContentControl Content="{StaticResource SaveMediumIconKey}"/>
-            <ContentControl Content="{StaticResource SearchIconKey}"/>
-            <ContentControl Content="{StaticResource SettingsIconKey}"/>
-            <ContentControl Content="{StaticResource SquareIconKey}"/>
-            <ContentControl Content="{StaticResource SquareSmallIconKey}"/>
-            <ContentControl Content="{StaticResource SquareSmallBlueIconKey}"/>
-            <ContentControl Content="{StaticResource SquareSmallGreenIconKey}"/>
-            <ContentControl Content="{StaticResource SquareSmallGrayIconKey}"/>
-            <ContentControl Content="{StaticResource SquareSmallRedIconKey}"/>
-            <ContentControl Content="{StaticResource StatisticIconKey}"/>
-            <ContentControl Content="{StaticResource SubmissionIconKey}"/>
-            <ContentControl Content="{StaticResource SubmissionMediumIconKey}"/>
-            <ContentControl Content="{StaticResource TableIconKey}"/>
-            <ContentControl Content="{StaticResource TagIconKey}"/>
-            <ContentControl Content="{StaticResource TitleIconKey}"/>
-            <ContentControl Content="{StaticResource ToggleIconKey}"/>
-            <ContentControl Content="{StaticResource ToolIconKey}"/>
-            <ContentControl Content="{StaticResource UserIconKey}"/>
-            <ContentControl Content="{StaticResource XIconKey}"/>
-            <ContentControl Content="{StaticResource XMediumIconKey}"/>
-            <ContentControl Content="{StaticResource XRedIconKey}"/>
-            <ContentControl Content="{StaticResource XSmallRedIconKey}"/>
-            <ContentControl Content="{StaticResource ZIconKey}"/>
-        </WrapPanel>
-
     </StackPanel>
-</tk:AppWindow>
+</mah:MetroWindow>
